--- a/template.html
+++ b/template.html
@@ -373,5 +373,5 @@ pybossa.presentTask(function(task, deferred) {
     }
 });
 
-pybossa.run('CSvalidate2');
+pybossa.run('csvalidate2');
 </script>
