--- a/template.html
+++ b/template.html
@@ -87,7 +87,8 @@
     <div class="col-md-8"><!-- Start of Photo DIV (column) -->
         <a href="../tutorial" class="btn btn-info pull-right" style="margin-bottom:10px;margin-left: 5px; ">Tutorial</a>
         <a id="newtab" target="_blank" href="#" class="btn btn-primary pull-right" style="margin-bottom:10px;">Open in a new tab</a>
-        <div id="text" class="embed-responsive embed-responsive-4by3"></div>
+        <!--<div id="text" class="embed-responsive embed-responsive-4by3"></div>-->
+        <div id="text"></div>
     </div><!-- End of Photo DIV (columnt) -->
 </div><!-- End of Skeleton Row -->
 
